# wireless_data_logging

./: LICENSE  README.md
uav_comms_msgs/: CMakeLists.txt  package.xml
uav_comms_msgs/msg/: LoraInfoStamped.msg  LoraParamsInfoStamped.msg  WifiInfoStamped.msg
uav_lora/: CMakeLists.txt  package.xml
uav_lora/launch/: uav_lora.launch.py
uav_lora/src/: uav_lora_node.cpp
uav_wifi/: CMakeLists.txt  README.md  package.xml
uav_wifi/launch/: mavros_bridge_wifi.launch.py  uav_wifi.launch.py
uav_wifi/src/: uav_wifi_node.cpp
