<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>uav_comms_msgs</name>
	<version>0.0.1</version>
	<description>Contains message and service definitions used by uosm uav comms module.</description>
	<maintainer email="skl1g14@soton.ac.uk">Janitor</maintainer>
	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<build_depend>ament_cmake_auto</build_depend>
	<build_depend>builtin_interfaces</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>rosidl_default_generators</build_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_cmake_cppcheck</test_depend>
	<test_depend>ament_cmake_lint_cmake</test_depend>
	<test_depend>ament_cmake_xmllint</test_depend>
	<member_of_group>rosidl_interface_packages</member_of_group>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>