<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>uav_wifi</name>
	<version>0.0.1</version>
	<description>Contains ros2 wifi uav node.</description>
	<maintainer email="skl1g14@soton.ac.uk">Janitor</maintainer>
	<license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_cmake</depend>
  <depend>std_msgs</depend>
  <depend>uav_comms_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>